# nixless-agent

./: .gitignore  Cargo.toml  README.md  TODO  flake.nix  justfile  service.nix
nix-core/: Cargo.toml
nix-core/src/: lib.rs  signing.rs
nixless-agent/: Cargo.toml
nixless-agent/src/: dbus_connection.rs  downloader.rs  fingerprint.rs  main.rs  metrics.rs  owned_nar_info.rs  path_utils.rs  process_init.rs  signing.rs  state_keeper.rs  system_configuration.rs  telemetry.rs  unpacker.rs
nixless-agent/src/actors/: deleter.rs  downloader.rs  mod.rs  server.rs  state_keeper.rs  unpacker.rs
nixless-agent/src/state/: agent_state.rs  mod.rs  system_switch.rs
nixless-request-signer/: Cargo.toml
nixless-request-signer/src/: main.rs
system-switch-tracker/: Cargo.toml
system-switch-tracker/src/: main.rs
tests/: binary_cache_machine.nix  default.nix  normal.nix  test_machine.nix
xz-decoder/: Cargo.toml
xz-decoder/src/: lib.rs
