[package]
name = "nixless-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = [ "rustls" ] }
anyhow = "1"
base64 = "0.22"
caps = "0.5"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
fastrand = "2"
futures = "0.3"
# I read the source code and hereby confirm the code in v1.0.1 looks ok.
narinfo = "1.0.1"
nix = { version = "0.28", default_features = false, features = ["fs", "mount", "sched"] }
nix-core = { path = "../nix-core" }
# TODO: finish reading source code and check if it looks ok.
nix-nar = "0.3.0"
reqwest = { version = "0.12", default_features = false, features = ["http2", "charset", "rustls-tls", "stream"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
xz-decoder = { path = "../xz-decoder" }