[package]
name = "nixless-agent"
description = "A NixOS deployment agent for machines without Nix."
authors = ["DS"]
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = [ "rustls" ] }
anyhow = "1"
base64 = "0.22"
caps = "0.5"
clap = { version = "4", features = ["derive", "env"] }
dbus = { version = "0.9", features = ["futures"] }
dbus-tokio = "0.7"
derive_builder = "0.20"
dotenvy = "0.15"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
fastrand = "2"
foundations = { version = "3.3.0", default_features = false, features = ["telemetry-server", "metrics", "memory-profiling", "security"] }
futures = "0.3"
narinfo = "1.0.1"
nix = { version = "0.28", default_features = false, features = ["fs", "mount", "net", "sched", "user"] }
nix-core = { path = "../nix-core" }
nix-nar = "0.3.0"
reqwest = { version = "0.12", default_features = false, features = ["http2", "charset", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io", "io-util"] }
tracing = "0.1"
tracing-subscriber = "0.3"
xz-decoder = { path = "../xz-decoder" }